--- a/bower.json
+++ b/bower.json
@@ -29,10 +29,10 @@
     "bootstrap-daterangepicker": "^2.1.25",
     "bootstrap-table": "^1.11.1",
     "tableExport.jquery.plugin": "^1.8.2",
-    "js-xlsx": "^0.10.1"
+    "js-xlsx": "0.10.1"
   },
   "resolutions": {
     "jquery": "1.9.1 - 3",
-    "jspdf": "1.1.239 || 1.3.2"
+    "jspdf": "~1.0.178"
   }
 }
